# cellos_cmake

./: CMakeLists.txt  README.md  build.bat  build.sh  powerpc-eabi-gcc.bashrc  powerpc-unknown-eabi-gcc.bashrc  qemu-for-windows.bashrc  run_job.py
bootrom/: CMakeLists.txt
cellos/: CMakeLists.txt
driver/: CMakeLists.txt
kernel/: CMakeLists.txt
spec/: powerpc-none-eabi-binutils.spec  powerpc-none-eabi-gcc.spec  powerpc-none-eabi-gdb.spec  powerpc-none-eabi-newlib.spec  qemu-minimal-3.0.0.spec  qemu-minimal-4.1.1.spec  qemu-minimal-4.2.0.spec  qemu-minimal-5.0.0.spec  qemu-minimal-5.1.0.spec
src/include/asm/: bitops.h  byteorder.h
startup/: .gitignore  CMakeLists.txt  replace.sh  update_ld_script.sh
